--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,10 @@ export(uploadFilesUI)
 import(shiny)
 importFrom(DT,DTOutput)
 importFrom(DT,renderDT)
+importFrom(DataTools,checkErrorNoNumericColumns)
+importFrom(DataTools,checkWarningEmptyValues)
+importFrom(DataTools,importDataServer)
+importFrom(DataTools,importDataUI)
 importFrom(Rfast,rmvnorm)
 importFrom(Rfast,spdinv)
 importFrom(colourpicker,colourInput)
@@ -59,17 +63,15 @@ importFrom(mgcv,s)
 importFrom(mgcv,smoothCon)
 importFrom(openxlsx,read.xlsx)
 importFrom(openxlsx,write.xlsx)
-importFrom(readr,guess_encoding)
-importFrom(readxl,read_excel)
 importFrom(rlang,.data)
 importFrom(shinyalert,shinyalert)
-importFrom(shinyjs,reset)
 importFrom(shinyjs,useShinyjs)
 importFrom(stats,cor)
 importFrom(stats,density)
 importFrom(stats,dunif)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,pnorm)
 importFrom(stats,qnorm)
 importFrom(stats,rgamma)
 importFrom(stats,rnorm)
@@ -80,6 +82,5 @@ importFrom(stats,var)
 importFrom(tibble,tribble)
 importFrom(utils,head)
 importFrom(utils,packageVersion)
-importFrom(utils,read.csv)
 importFrom(utils,write.table)
 importFrom(zip,zipr)
