--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: PlotR
 Title: Plot things
-Version: 23.01.2
+Version: 23.03.1
 Authors@R: c(
     person("Marcus", "Gross", email = "marcus.gross@inwt-statistics.de", role = c("aut", "cre")),
     person("Ricardo", "Fernandes", email = "ldv1452@gmail.com", role = c("aut")),
@@ -9,13 +9,15 @@ Authors@R: c(
     )
 Maintainer: Marcus Gross <marcus.gross@inwt-statistics.de>
 Description: Plot things.
-Depends: R (>= 3.5.0)
+Depends: R (>= 4.2.2)
+Remotes:
+  github::ben-aaron188/rgpt3
 Imports:
   colourpicker,
   dplyr,
   DT,
   futile.logger,
-  DataTools (>= 23.1.6),
+  DataTools (>= 23.03.1),
   jsonlite,
   magrittr,
   mgcv,
@@ -34,4 +36,4 @@ LazyData: true
 Suggests:
   lintr (>= 1.0.2),
   testthat
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
