--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,9 @@ importFrom(DataTools,checkErrorNoNumericColumns)
 importFrom(DataTools,checkWarningEmptyValues)
 importFrom(DataTools,importDataServer)
 importFrom(DataTools,importDataUI)
+importFrom(DataTools,remoteModelsServer)
+importFrom(DataTools,remoteModelsUI)
+importFrom(DataTools,tryCatchWithWarningsAndErrors)
 importFrom(Rfast,rmvnorm)
 importFrom(Rfast,spdinv)
 importFrom(colourpicker,colourInput)
