add missing package for rgpt3

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Authors@R: c(
 Maintainer: Marcus Gross <marcus.gross@inwt-statistics.de>
 Description: Plot things.
 Depends: R (>= 3.5.0)
+Remotes:
+  github::ben-aaron188/rgpt3
 Imports:
   colourpicker,
   dplyr,
