Feat/3 add legend (#33)
* fixes error with if_else

* add legend to multiplot

* package version and namespace

* remove if_else from namespace

* update news

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,7 +39,6 @@ importFrom(colourpicker,updateColourInput)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
-importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
@@ -52,6 +51,7 @@ importFrom(grDevices,tiff)
 importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,box)
+importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
