--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(grDevices,col2rgb)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(grDevices,png)
@@ -57,6 +58,7 @@ importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
+importFrom(graphics,polygon)
 importFrom(graphics,rect)
 importFrom(graphics,text)
 importFrom(jsonlite,toJSON)
