--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,8 +39,8 @@ importFrom(colourpicker,updateColourInput)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
-importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
+importFrom(grDevices,col2rgb)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(grDevices,png)
@@ -52,11 +52,13 @@ importFrom(grDevices,tiff)
 importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,box)
+importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
+importFrom(graphics,polygon)
 importFrom(graphics,rect)
 importFrom(graphics,text)
 importFrom(jsonlite,toJSON)
