Feat/apply model import from datatools (#43)
* add yaml config

* apply config

* use modelimport from dataTools, remove old module

* clean up namespace

* update news.md, clean up

* load yaml inside server.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,10 +29,10 @@ importFrom(DT,DTOutput)
 importFrom(DT,renderDT)
 importFrom(DataTools,checkErrorNoNumericColumns)
 importFrom(DataTools,checkWarningEmptyValues)
+importFrom(DataTools,downloadModelServer)
+importFrom(DataTools,downloadModelUI)
 importFrom(DataTools,importDataServer)
 importFrom(DataTools,importDataUI)
-importFrom(DataTools,remoteModelsServer)
-importFrom(DataTools,remoteModelsUI)
 importFrom(DataTools,tryCatchWithWarningsAndErrors)
 importFrom(Rfast,rmvnorm)
 importFrom(Rfast,spdinv)
