update config, add help

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ export(addMoreData)
 export(addMoreDataUI)
 export(addMorePoints)
 export(addMorePointsUI)
+export(config)
 export(downUploads)
 export(downUploadsUI)
 export(exportCSV)
 export(exportFilename)
 export(exportXLSX)
+export(getHelp)
 export(goodnessOfFit)
 export(goodnessOfFitUI)
 export(multiplePlots)
@@ -68,7 +70,6 @@ importFrom(magrittr,"%>%")
 importFrom(mgcv,Predict.matrix)
 importFrom(mgcv,s)
 importFrom(mgcv,smoothCon)
-importFrom(openxlsx,read.xlsx)
 importFrom(openxlsx,write.xlsx)
 importFrom(rlang,.data)
 importFrom(shinyalert,shinyalert)
@@ -87,7 +88,5 @@ importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,var)
 importFrom(tibble,tribble)
-importFrom(utils,head)
-importFrom(utils,packageVersion)
 importFrom(utils,write.table)
-importFrom(zip,zipr)
+importFrom(yaml,read_yaml)
