--- a/inst/config.yaml
+++ b/inst/config.yaml
@@ -1,4 +1,16 @@
 defaultSourceData: "file"           # for import of data
 defaultSourceModel: "file"           # for import of models
+# file types that are allowed for import from Pandora ("ckan")
+ckanFileTypes:
+  - "xls"
+  - "xlsx"
+  - "csv"
+  - "odt"
+  - "txt"
+ckanModelTypes:
+  - "zip"
+  - "plotr"
+githubRepo: "plotr"        # for import of models
+mainFolder: "predefinedModels"  # for import of models
 fileExtension: "plotr"      # for download of models
 rPackageName: "PlotR"       # for download and import of models
