--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: PlotR
 Title: Plot things
-Version: 23.12.0
+Version: 23.12.1
 Authors@R: c(
     person("Marcus", "Gross", email = "marcus.gross@inwt-statistics.de", role = c("aut", "cre")),
     person("Ricardo", "Fernandes", email = "ldv1452@gmail.com", role = c("aut")),
@@ -14,7 +14,7 @@ Remotes:
   github::ben-aaron188/rgpt3
 Imports:
   colourpicker,
-  DataTools (>= 23.12.0),
+  DataTools (>= 23.12.2),
   dplyr,
   DT,
   futile.logger,
@@ -29,8 +29,7 @@ Imports:
   shinyjs,
   shinythemes,
   tibble,
-  yaml,
-  zip
+  yaml
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
