add back Depends

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Authors@R: c(
     )
 Maintainer: Marcus Gross <marcus.gross@inwt-statistics.de>
 Description: Plot things.
+Depends: R (>= 3.5.0)
 Imports:
   colourpicker,
   DataTools (>= 23.12.2),
