--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -39,6 +39,14 @@ jobs:
             local::.
           needs: website
 
+      - name: Test repos
+        if: always()
+        run: |
+          pak::repo_status()
+          pak::repo_status()$url
+          pak::meta_list("DataTools")
+        shell: Rscript {0}
+
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
